# PythonPackageSample

./: .gitignore  Journey_With_Python_Packaging.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
azure-functions-agent-durable/: pyproject.toml
azure-functions-agent-durable/azurefunctions/agents/durable/: __init__.py  durable.py
azure-functions-agent-framework/: pyproject.toml
azure-functions-agent-framework/azurefunctions/agents/framework/: __init__.py  client.py
sample_project/: pyproject.toml
sample_project/sample_project/: main.py
